--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Clash of Clans API in typescript",
 	"main": "index.js",
 	"scripts": {
+		"build": "tsc",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
